--- a/_sass/color_schemes/gr.scss
+++ b/_sass/color_schemes/gr.scss
@@ -5,7 +5,7 @@ $body-heading-color: $grey-dk-300;
 $body-text-color: $grey-dk-100;
 $link-color: $purple-000;
 $nav-child-link-color: $grey-dk-100;
-$sidebar-color: #d1c7c7;
+$sidebar-color: $grey-lt-000;
 $base-button-color: #f7f7f7;
 $btn-primary-color: $purple-100;
 $code-background-color: $grey-lt-000;
