--- a/_sass/color_schemes/gr.scss
+++ b/_sass/color_schemes/gr.scss
@@ -3,7 +3,7 @@
 $body-background-color: $white;
 $body-heading-color: $grey-dk-300;
 $body-text-color: $grey-dk-100;
-$link-color: $purple-000;
+$link-color: #024230;
 $nav-child-link-color: $grey-dk-100;
 $sidebar-color: $grey-lt-000;
 $base-button-color: #f7f7f7;
