--- a/_sass/color_schemes/gr.scss
+++ b/_sass/color_schemes/gr.scss
@@ -3,9 +3,9 @@
 $body-background-color: $white;
 $body-heading-color: $grey-dk-300;
 $body-text-color: $grey-dk-100;
-$link-color: #30c73f;
+$link-color: $purple-000;
 $nav-child-link-color: $grey-dk-100;
-$sidebar-color: $grey-lt-000;
+$sidebar-color: #b1bdb2;
 $base-button-color: #f7f7f7;
 $btn-primary-color: $purple-100;
 $code-background-color: $grey-lt-000;
